# cefpyco

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.html  README.md  build.bash  pyproject.toml  setup.cfg  setup.py
c_src/: CMakeLists.txt  cefpyco.c  cefpyco.h  cefpyco_def.h  cefpyco_parse.c  cefpyco_parse.h  cefpyco_util.c  cefpyco_util.h  pywrap_cefpyco.c
c_src/cefparse/: CMakeLists.txt  cpcparse_app_frame.c  cpcparse_app_frame_7_5.c  cpcparse_app_request.c  cpcparse_app_request.h  cpcparse_interest.c  cpcparse_interest.h  cpcparse_intreturn.c  cpcparse_tlv.c  cpcparse_tlv.h  cpcparse_type.c  cpcparse_type.h
c_src/test/: CMakeLists.txt  run_cefpyco.c  test_cefpyco.c
cefapp/: LICENSE  README.html  README.md  cefapp.py  cefappconsumer.py  cefappproducer.py  pyproject.toml
cefapp/src/cefapp/: __init__.py  __main__.py  cefapp.py  cefappconsumer.py  cefappproducer.py
cefapp/test/: connection_test.bash  test_cefapp.py
cefpyco/: core.py
src/cefpyco/: CMakeLists.txt  __init__.py  core.py
src/cefpyco_c/: CMakeLists.txt  cefpyco.c  cefpyco_parse.c  cefpyco_util.c  pywrap_cefpyco.c
src/cefpyco_c/cefparse/: CMakeLists.txt  cpcparse_app_frame.c  cpcparse_app_frame_7_5.c  cpcparse_app_request.c  cpcparse_interest.c  cpcparse_intreturn.c  cpcparse_tlv.c  cpcparse_type.c
src/cefpyco_c/cefparse/include/: cpcparse_app_frame.h  cpcparse_app_frame_7_5.h  cpcparse_app_request.h  cpcparse_intreturn.h  cpcparse_tlv.h  cpcparse_type.h
src/cefpyco_c/include/: cefpyco.h  cefpyco_def.h  cefpyco_parse.h  cefpyco_util.h  pywrap.h
src/cefpyco_c/test/: CMakeLists.txt  run_cefpyco.c  test_cefpyco.c
src/cefpyco_wrap/: CMakeLists.txt  pywrap_cefpyco.c
src/cefpyco_wrap/include/: pywrap.h
test/: CMakeLists.txt  cefpycotest.py  test_cefpyco.c  test_core.py  test_libcefpyco.py
