[metadata]
name = cefpyco
version = 0.10.0.4
description = Cefore Python Compact (cefpyco) package.
url = https://github.com/cefore/cefpyco
license = BSD License 2.0
license_files = LICENSE
author = Atsushi Ooka
author_email = a-ooka@nict.go.jp
classifiers =
programming language :: Python :: 3
operating system :: Linux OS or Mac OS

[options]
install_requires = 
    pytest 
    click
