[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cefapp"
version = "0.10.0.1"
authors = [
  { name = "National Institute of Information and Communications Technology", email = "na5icn@ml.nict.go.jp" },
  { name = "Atsushi Ooka", email = "a-ooka@nict.go.jp" },
]
description = "Cefore application library using cefpyco"
readme = "README.md"
requires-python = ">=3.7"
license = { file = "LICENSE" }
classifiers = [
  "Programming Language :: Python :: 3",
  "Operating System :: Linux OS or Mac OS",
]
dependencies = ["cefpyco", "click", "rich"]

[project.urls]
"Homepage" = "https://cefore.net/"
"Github (Cefore)" = "https://github.com/cefore/cefore"
"Github (cefpyco)" = "https://github.com/cefore/cefpyco"
"Handson in ICN-WS 2021 (JP)" = "https://github.com/cefore/2021-hands-on"
"References in ICN-WS (JP)" = "https://www.ieice.org/~icn/?page_id=1208"

[project.optional-dependencies]
dev = ["pytest"]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.pytest.ini_options]
pythonpath = ["src"]
